native/tests/snapshots/parse_tests__outline_go.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(&result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                7,
                "keyword",
            ),
        ],
        [],
        [
            (
                0,
                4,
                "keyword",
            ),
            (
                5,
                9,
                "function",
            ),
        ],
        [
            (
                4,
                11,
                "function.builtin",
            ),
            (
                12,
                19,
                "string",
            ),
        ],
        [],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "package_clause",
            name: "main",
            detail: "",
            start_byte: 0,
            end_byte: 12,
            children: [],
        },
        OutlineNode {
            kind: "function_declaration",
            name: "main",
            detail: "",
            start_byte: 14,
            end_byte: 50,
            children: [],
        },
    ],
}
