native/tests/snapshots/parse_tests__outline_java.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(&result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                6,
                "keyword",
            ),
            (
                7,
                12,
                "keyword",
            ),
            (
                13,
                17,
                "type",
            ),
        ],
        [
            (
                4,
                10,
                "keyword",
            ),
            (
                11,
                17,
                "keyword",
            ),
            (
                18,
                22,
                "type.builtin",
            ),
            (
                23,
                27,
                "function.method",
            ),
            (
                28,
                34,
                "type",
            ),
            (
                37,
                41,
                "variable",
            ),
        ],
        [],
        [],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_declaration",
            name: "Main",
            detail: "",
            start_byte: 0,
            end_byte: 72,
            children: [
                OutlineNode {
                    kind: "method_declaration",
                    name: "main",
                    detail: "",
                    start_byte: 24,
                    end_byte: 70,
                    children: [],
                },
            ],
        },
    ],
}
