native/tests/snapshots/parse_tests__outline_python.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(&result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                5,
                "keyword",
            ),
            (
                6,
                13,
                "constructor",
            ),
        ],
        [
            (
                4,
                7,
                "keyword",
            ),
            (
                8,
                13,
                "function",
            ),
            (
                14,
                18,
                "variable",
            ),
        ],
        [
            (
                8,
                13,
                "function.builtin",
            ),
            (
                14,
                21,
                "string",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_definition",
            name: "Greeter",
            detail: "",
            start_byte: 0,
            end_byte: 58,
            children: [
                OutlineNode {
                    kind: "function_definition",
                    name: "greet",
                    detail: "",
                    start_byte: 19,
                    end_byte: 58,
                    children: [],
                },
            ],
        },
    ],
}
