native/tests/snapshots/parse_tests__outline_rust.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(&result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                3,
                "keyword",
            ),
            (
                7,
                9,
                "punctuation.delimiter",
            ),
            (
                12,
                13,
                "punctuation.delimiter",
            ),
        ],
        [],
        [
            (
                0,
                3,
                "keyword",
            ),
            (
                10,
                11,
                "punctuation.bracket",
            ),
        ],
        [
            (
                4,
                7,
                "keyword",
            ),
            (
                8,
                10,
                "keyword",
            ),
            (
                11,
                17,
                "function",
            ),
            (
                17,
                18,
                "punctuation.bracket",
            ),
            (
                18,
                19,
                "punctuation.bracket",
            ),
            (
                23,
                26,
                "type.builtin",
            ),
            (
                27,
                28,
                "punctuation.bracket",
            ),
        ],
        [
            (
                8,
                10,
                "constant.builtin",
            ),
        ],
        [
            (
                4,
                5,
                "punctuation.bracket",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.bracket",
            ),
        ],
        [],
        [
            (
                0,
                2,
                "keyword",
            ),
            (
                3,
                7,
                "function",
            ),
            (
                7,
                8,
                "punctuation.bracket",
            ),
            (
                8,
                9,
                "punctuation.bracket",
            ),
            (
                10,
                11,
                "punctuation.bracket",
            ),
        ],
        [
            (
                4,
                7,
                "keyword",
            ),
            (
                12,
                13,
                "constant.builtin",
            ),
            (
                13,
                14,
                "punctuation.delimiter",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "mod_item",
            name: "utils",
            detail: "",
            start_byte: 15,
            end_byte: 74,
            children: [
                OutlineNode {
                    kind: "function_item",
                    name: "helper",
                    detail: "",
                    start_byte: 31,
                    end_byte: 72,
                    children: [],
                },
            ],
        },
        OutlineNode {
            kind: "function_item",
            name: "main",
            detail: "",
            start_byte: 76,
            end_byte: 104,
            children: [],
        },
    ],
}
