native/tests/snapshots/parse_tests__parse_bash.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                4,
                "function",
            ),
        ],
        [],
    ],
    outline: [],
}
