native/tests/snapshots/parse_tests__parse_c.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                8,
                "keyword",
            ),
            (
                9,
                18,
                "string",
            ),
        ],
        [
            (
                0,
                3,
                "type",
            ),
            (
                4,
                8,
                "function",
            ),
            (
                13,
                28,
                "comment",
            ),
            (
                29,
                32,
                "type",
            ),
            (
                33,
                34,
                "variable",
            ),
            (
                35,
                36,
                "operator",
            ),
            (
                37,
                38,
                "number",
            ),
            (
                38,
                39,
                "delimiter",
            ),
            (
                40,
                46,
                "keyword",
            ),
            (
                47,
                48,
                "number",
            ),
            (
                48,
                49,
                "delimiter",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_definition",
            name: "main",
            detail: "",
            start_byte: 19,
            end_byte: 70,
            children: [],
        },
    ],
}
