native/tests/snapshots/parse_tests__parse_cjs.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                6,
                "variable.builtin",
            ),
            (
                6,
                7,
                "punctuation.delimiter",
            ),
            (
                7,
                14,
                "property",
            ),
            (
                15,
                16,
                "operator",
            ),
            (
                17,
                18,
                "number",
            ),
            (
                18,
                19,
                "punctuation.delimiter",
            ),
        ],
        [],
    ],
    outline: [],
}
