native/tests/snapshots/parse_tests__parse_cpp.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                3,
                "type",
            ),
            (
                4,
                8,
                "function",
            ),
            (
                13,
                27,
                "comment",
            ),
        ],
        [
            (
                2,
                6,
                "type",
            ),
            (
                7,
                8,
                "variable",
            ),
            (
                9,
                10,
                "operator",
            ),
            (
                11,
                12,
                "number",
            ),
            (
                12,
                13,
                "delimiter",
            ),
            (
                14,
                25,
                "comment",
            ),
            (
                26,
                32,
                "keyword",
            ),
            (
                33,
                34,
                "variable",
            ),
            (
                34,
                35,
                "delimiter",
            ),
        ],
        [],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_definition",
            name: "main",
            detail: "",
            start_byte: 0,
            end_byte: 65,
            children: [],
        },
    ],
}
