native/tests/snapshots/parse_tests__parse_cs.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                13,
                "comment",
            ),
        ],
        [
            (
                0,
                5,
                "keyword",
            ),
            (
                6,
                7,
                "type",
            ),
            (
                8,
                9,
                "punctuation.bracket",
            ),
            (
                10,
                13,
                "type.builtin",
            ),
            (
                14,
                15,
                "function",
            ),
            (
                15,
                16,
                "punctuation.bracket",
            ),
            (
                16,
                17,
                "punctuation.bracket",
            ),
            (
                18,
                19,
                "punctuation.bracket",
            ),
            (
                20,
                26,
                "keyword",
            ),
            (
                27,
                28,
                "number",
            ),
            (
                28,
                29,
                "punctuation.delimiter",
            ),
            (
                30,
                31,
                "punctuation.bracket",
            ),
            (
                32,
                33,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_declaration",
            name: "C",
            detail: "",
            start_byte: 14,
            end_byte: 47,
            children: [
                OutlineNode {
                    kind: "method_declaration",
                    name: "M",
                    detail: "",
                    start_byte: 24,
                    end_byte: 45,
                    children: [],
                },
            ],
        },
    ],
}
