native/tests/snapshots/parse_tests__parse_css.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                17,
                "comment",
            ),
        ],
        [
            (
                0,
                4,
                "tag",
            ),
            (
                5,
                6,
                "punctuation.bracket",
            ),
            (
                7,
                12,
                "property",
            ),
            (
                12,
                13,
                "punctuation.delimiter",
            ),
            (
                17,
                18,
                "punctuation.delimiter",
            ),
            (
                19,
                20,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [],
}
