native/tests/snapshots/parse_tests__parse_go.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                7,
                "keyword",
            ),
        ],
        [],
        [
            (
                0,
                13,
                "comment",
            ),
        ],
        [
            (
                0,
                4,
                "keyword",
            ),
            (
                5,
                9,
                "function",
            ),
        ],
        [
            (
                1,
                4,
                "variable",
            ),
            (
                5,
                12,
                "function.method",
            ),
            (
                13,
                17,
                "string",
            ),
        ],
        [],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "package_clause",
            name: "main",
            detail: "",
            start_byte: 0,
            end_byte: 12,
            children: [],
        },
        OutlineNode {
            kind: "function_declaration",
            name: "main",
            detail: "",
            start_byte: 28,
            end_byte: 62,
            children: [],
        },
    ],
}
