native/tests/snapshots/parse_tests__parse_h.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                7,
                "keyword",
            ),
            (
                8,
                9,
                "constant",
            ),
        ],
        [
            (
                0,
                7,
                "keyword",
            ),
            (
                8,
                9,
                "constant",
            ),
        ],
        [
            (
                0,
                3,
                "type",
            ),
            (
                4,
                7,
                "function",
            ),
            (
                8,
                11,
                "type",
            ),
            (
                12,
                13,
                "variable",
            ),
            (
                15,
                18,
                "type",
            ),
            (
                19,
                20,
                "variable",
            ),
            (
                21,
                22,
                "delimiter",
            ),
            (
                23,
                40,
                "comment",
            ),
        ],
        [
            (
                0,
                6,
                "keyword",
            ),
        ],
        [],
    ],
    outline: [],
}
